# zingy-server

./: .env  .env.example  .gitignore  Cargo.toml  Config.example.toml  Config.toml  README.md
public/: index.html
public/log/: index.html
src/: lib.rs  main.rs  startup.rs
src/configuration/: database.rs  environtment.rs  mod.rs
src/domain/: mod.rs
src/features/: mod.rs
src/infrastructure/: mod.rs
src/interface/: mod.rs
src/interface/api/: mod.rs
src/interface/web/: mod.rs
src/logs/: mod.rs
views/: home.html  index.html
views/test/: test.html
