[package]
name = "zingy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.40.0", features = ["full"]}
sqlx = { version = "0.8.2", features = [ "runtime-tokio-native-tls" , "postgres" ] }

axum = "0.7.6"
askama = "0.12.1"
askama_axum = "0.4.0"
toml = "0.8.19"
serde = "1.0.210"
serde_derive = "1.0.210"
